@@ -24,3 +24,8 @@ RSpec.configure do |config|
     end
   end
 end
+
+# Override default rack_test driver to respect data-method attributes.
+Capybara.register_driver :rack_test do |app|
+  Capybara::RackTest::Driver.new(app, :respect_data_method => true)
+end
